--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,34 +10,78 @@
     <link rel="stylesheet" href="asset/css/index.css">
     <link rel="stylesheet" href="asset/css/responsive.css">
 </head>
+
 <body>
     <div class="header">
-        <div class="topnav grid wide">
-            <div class="row">
-                <div class="col lx-3 l-3 m-6 c-12">
-                    <h1 class="brand">
-                        <a href="#" class="brand--link">Mentorbox</a>
-                    </h1>
+        <!-- top nav  -->
+        <div class="topnav">
+            <div class="grid wide">
+                <div class="row no-guttes">
+                    <!-- Brand name -->
+                    <div class="col lx-3 l-3 m-6 c-12">
+                        <h1 class="brand">
+                            <a href="#" class="brand--link">Mentorbox</a>
+                        </h1>
+                    </div>
+                    <!-- end Brand name -->
+
+                    <!-- main nav  -->
+                    <div class="col lx-6 l-6 m-0 c-0">
+                        <ul class="topnav__nav row no-gutters text-capitalize">
+                            <li><a href="# ">How it works</a></li>
+                            <li><a href="# ">About us</a></li>
+                            <li><a href="# ">Pricing</a></li>
+                            <li><a href="# ">Contact</a></li>
+                        </ul>
+                    </div>
+                    <!-- end main nav  -->
+
+                    <!-- user login and menu button  -->
+                    <div class="col lx-3 l-3 m-6 c-12">
+                        <div class="topnav__user">
+                            <div class="row no-guttes text-capitalize">
+                                <a href="#" class="topnav__user--login">Log in</a>
+                                <a href="#" class="topnav__user--signup">Sign up</a>
+                                <a href="#" class="topnav__user--openmenu l-0"><i class="fa-solid fa-bars"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- end user login and menu button  -->
+
                 </div>
-                <div class="col lx-6 l-6 m-0 c-0">
-                    <ul class="topnav__nav row no-guttes">
-                        <li><a href="# ">How it works</a></li>
-                        <li><a href="# ">About us</a></li>
-                        <li><a href="# ">Pricing</a></li>
-                        <li><a href="# ">Contact</a></li>
-                    </ul>
-                </div>
-                <div class="col lx-3 l-3 m-6 c-12">
-                    <div class="topnav__user">
-                        <div class="row no-guttes ">
-                            <a href="#" class="topnav__user--login">Log in</a>
-                            <a href="#" class="topnav__user--signup">Sign up</a>
-                            <a href="#" class="topnav__user--openmenu l-0"><i class="fa-solid fa-bars"></i></a>
+            </div>
+        </div>
+        <!-- end  top nav  -->
+
+        <!-- main header  -->
+        <div class="header__main">
+            <!-- Brand slogan  -->
+            <div class="grid wide">
+                <div class="row no-gutters">
+                    <div class="col lx-8 l-6 lx-o-1 m-12 l-o-1 ">
+                        <div class="header__main--slogan">
+                            <h2 class="text-capitalize">Learn from the best</h2>
+                            <p>Nostrud laborum veniam amet sit qui incididunt amet tempor nisi labore. Tempor ad consectetur et est
+                                in. Esse aliqua esse esse quis laborum tempor occaecat proident.</p>
+                            <div class="slogan__btn">
+                                <a href="#" class="text-capitalize">Get started</a>
+                                <a href="#" class="text-capitalize">Find out more</a>
+                            </div>    
                         </div>
                     </div>
                 </div>
             </div>
+            <!-- end Brand slogan  -->
+
+            <div class="header__main--img only-pc">
+                <img src="asset/image/Phone Mockup.png" alt="Iphone X">
+            </div>
         </div>
+        <!-- end main header  -->
+
     </div>
+
+
 </body>
+
 </html>
