--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                     <div class="col lx-8 l-6 lx-o-1 m-12 l-o-1 ">
                         <div class="header__main--slogan">
                             <h2 class="text-capitalize">Learn from the best</h2>
-                            <p>Nostrud laborum veniam amet sit qui incididunt amet tempor nisi labore. Tempor ad consectetur et est
-                                in. Esse aliqua esse esse quis laborum tempor occaecat proident.</p>
+                            <p>Mentorbox connects you with the leading experts in your chosen field. 
+                                Quickly find and learn from over 200 carefully selected mentors.</p>
                             <div class="slogan__btn">
                                 <a href="#" class="text-capitalize">Get started</a>
                                 <a href="#" class="text-capitalize">Find out more</a>
