update img hover

--- a/mentorbox/index.html
+++ b/mentorbox/index.html
@@ -106,25 +106,25 @@
                     <div class="row slider__wrap">
                         <div class="col lx-3 l-3 m-6 c-12">
                             <div class="slider__item">
-                                <img src="asset/image/toppic/Rectangle 6.png" alt="">
+                                <a href="#"><img src="asset/image/toppic/Rectangle 6.png" alt=""></a>
                                 <p>Cooking</p>
                             </div>
                         </div>
                         <div class="col lx-3 l-3 m-6 c-12 c-0">
                             <div class="slider__item">
-                                <img src="asset/image/toppic/Rectangle 6-1.png" alt="">
+                                <a href="#"><img src="asset/image/toppic/Rectangle 6-1.png" alt=""></a>
                                 <p>Cooking</p>
                             </div>
                         </div>
                         <div class="col lx-3 l-3 m-6 c-12 only-pc">
                             <div class="slider__item">
-                                <img src="asset/image/toppic/Rectangle 6-2.png" alt="">
+                                <a href="#"><img src="asset/image/toppic/Rectangle 6-2.png" alt=""></a>
                                 <p>Cooking</p>
                             </div>
                         </div>
                         <div class="col lx-3 l-3 m-6 c-12 only-pc">
                             <div class="slider__item">
-                                <img src="asset/image/toppic/Rectangle 6-3.png" alt="">
+                                <a href="#"><img src="asset/image/toppic/Rectangle 6-3.png" alt=""></a>
                                 <p>Cooking</p>
                             </div>
                         </div>
@@ -149,25 +149,25 @@
                     <div class="row slider__wrap">
                         <div class="col lx-3 l-3 m-6 c-12">
                             <div class="slider__item">
-                                <img src="asset/image/mentor/Rectangle 6.png" alt="">
+                                <a href="#"><img src="asset/image/mentor/Rectangle 6.png" alt=""></a>
                                 <p>Cooking</p>
                             </div>
                         </div>
                         <div class="col lx-3 l-3 m-6 c-12 c-0">
                             <div class="slider__item">
-                                <img src="asset/image/mentor/Rectangle 6-1.png" alt="">
+                                <a href="#"><img src="asset/image/mentor/Rectangle 6-1.png" alt=""></a>
                                 <p>Cooking</p>
                             </div>
                         </div>
                         <div class="col lx-3 l-3 m-6 c-12 only-pc">
                             <div class="slider__item">
-                                <img src="asset/image/mentor/Rectangle 6-2.png" alt="">
+                                <a href="#"><img src="asset/image/mentor/Rectangle 6-2.png" alt=""></a>
                                 <p>Cooking</p>
                             </div>
                         </div>
                         <div class="col lx-3 l-3 m-6 c-12 only-pc">
                             <div class="slider__item">
-                                <img src="asset/image/mentor/Rectangle 6-3.png" alt="">
+                                <a href="#"><img src="asset/image/mentor/Rectangle 6-3.png" alt=""></a>
                                 <p>Cooking</p>
                             </div>
                         </div>
