--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sinh Phan LTS-traning</title>
+  <style>
+    *{
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+  </style>
 </head>
 <body>
     <h1>Welcome</h1>
-    <a href="./mentorbox/">Mentorbox</a>
 </body>
 </html>
