--- a/react/fpt/src/layout2/index.html
+++ b/react/fpt/src/layout2/index.html
@@ -128,28 +128,69 @@
               <div class="dropdown-content ddtype-box width">
                 <div class="flex">
                   <div class="col lx-4 l-4">
-                    <h3>Hãng sản xuất</h3>
-                    <div class="flex">
-                      <a href="#">Apple(iphone)</a>
-                      <a href="#">SamSung</a>
-                      <a href="#">Oppo</a>
-                      <a href="#">Xiaomi</a>
-                      <a href="#">Vivo</a>
-                      <a href="#">Asus</a>
-                      <a href="#">Nokia</a>
-                      <a href="#">Mastel</a>
-                      <a href="#">Readmi</a>
+                    <div class="custom-menu">
+                      <h3>Hãng sản xuất</h3>
+                      <div class="flex">
+                        <a href="#" class="lx-4 l-6">Apple(iphone)</a>
+                        <a href="#" class="lx-4 l-6">SamSung</a>
+                        <a href="#" class="lx-4 l-6">Oppo</a>
+                        <a href="#" class="lx-4 l-6">Xiaomi</a>
+                        <a href="#" class="lx-4 l-6">Vivo</a>
+                        <a href="#" class="lx-4 l-6">Asus</a>
+                        <a href="#" class="lx-4 l-6">Nokia</a>
+                        <a href="#" class="lx-4 l-6">Mastel</a>
+                        <a href="#" class="lx-4 l-6">Readmi</a>
+                        <a href="#" class="lx-4 l-6">Tecno</a>
+                      </div>
+                      <h3>Đồng hồ thông minh</h3>
+                      <div class="flex">
+                        <a href="#" class="lx-4 l-6">Apple(iphone)</a>
+                        <a href="#" class="lx-4 l-6">SamSung</a>
+                        <a href="#" class="lx-4 l-6">Oppo</a>
+                        <a href="#" class="lx-4 l-6">Xiaomi</a>
+                        <a href="#" class="lx-4 l-6">Vivo</a>
+                        <a href="#" class="lx-4 l-6">Asus</a>
+                        <a href="#" class="lx-4 l-6">Nokia</a>
+                        <a href="#" class="lx-4 l-6">Mastel</a>
+                        <a href="#" class="lx-4 l-6">Readmi</a>
+                        <a href="#" class="lx-4 l-6">Tecno</a>
+                      </div>
                     </div>
-                    <h3>Đồng hồ thông minh</h3>
                   </div>
                   <div class="col lx-2 l-2">
-
+                    <div class="custom-menu">
+                      <h3>Mức giá</h3>
+                      <a href="#">Dưới 2tr</a>
+                      <a href="#">Dưới 2tr</a>
+                      <a href="#">Dưới 2tr</a>
+                    </div>
                   </div>
                   <div class="col lx-3 l-3">
-
+                    <div class="custom-menu">
+                      <h3>Bán chạy nhất</h3>
+                      <div class="product flex">
+                        <div class="product-img">
+                          <img src="https://images.fpt.shop/unsafe/fit-in/80x80/filters:quality(90):fill(white)/fptshop.com.vn/Uploads/Originals/2023/3/3/638134385008402132_samsung-galaxy-a14-4g-dd-moi.jpg" alt="">
+                        </div>
+                        <div class="product-desc">
+                          <p>Samsung Galaxy A14 4G 4GB</p>
+                          <span>4.490.000 ₫</span>
+                        </div>
+                      </div>
+                    </div>
                   </div>
                   <div class="col lx-3 l-3">
+                    <div class="custom-menu">
+                      <h3>Bán chạy nhất</h3>
+                      <div class="product flex">
+                        <div class="product-img">
 
+                        </div>
+                        <div class="product-desc">
+
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
