--- a/react/fpt/src/layout2/index.html
+++ b/react/fpt/src/layout2/index.html
@@ -888,7 +888,7 @@
           <!-- end brand-list  -->
 
           <!-- mobile filter  -->
-          <div class="mobile-filter">
+          <div class="mobile-filter only-mobile">
             <div class="flex-nowrap filter-by-price">
               <a href="#">Dưới 10 triệu</a>
               <a href="#">Từ 10 - 15 triệu</a>
