--- a/react/fpt/public/index.html
+++ b/react/fpt/public/index.html
@@ -25,6 +25,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    
+   <!-- font awesome  -->
+  <script src="https://kit.fontawesome.com/86aaaa56a8.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
